--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello! My name is Alana.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello! My name is Alana</title>
+</head>
+<body>
+  <p>This is my assignment!</p>
+</body>
+</html>
