--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hello! My name is Alana</title>
 </head>
 <body>
+  <h1>Hello, world</h1>
   <p>This is my assignment!</p>
 </body>
 </html>
