--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<h1>Hello, world!</h1>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,4 +10,4 @@
   <h1>Hello, world</h1>
   <p>This is my assignment!</p>
 </body>
-</html>
+</html> -->
